Clean up of initial indexing code
- Moved text indexing into Document class (Parser class was deleted)
- Implement score for indexing
- Improved test for DirSource